@@ -143,7 +143,7 @@ PHP_TIMEZONE =
 
 RESOLVER_CONF_FILE = /etc/resolv.conf
 
-LOCAL_DNS_RESOLVER = yes
+LOCAL_DNS_RESOLVER =
 
 #
 # LOGROTATE
