@@ -83,6 +83,7 @@ Tickets:
 	- Fixed #311: Defect - autoinstaller cleans squirrel data folder
 	- Fixed #313: Enhancement - Some improvements on postfix's master.cf (tx aseques)
 	- Fixed #314: Defect: Software package installation failed
+	- Fixed #318: Malfunction - Changes in imscp.conf are lost after upgrading
 
 
 -------------------------------------------------------------------------------------
